# projecto-final-turinmachin

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in  default.nix  doxy.conf  flake.nix  shell.nix
.github/workflows/: tests.yml
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  activation_8h.html  activation_8h.js  activation_8h__dep__incl.map  activation_8h__dep__incl.md5  activation_8h__incl.map  activation_8h__incl.md5  activation_8h_source.html  agent_8cpp.html  agent_8cpp.js  agent_8cpp__incl.map  agent_8cpp__incl.md5  agent_8h.html  agent_8h.js  agent_8h__dep__incl.map  agent_8h__dep__incl.md5  agent_8h__incl.map  agent_8h__incl.md5  agent_8h_source.html  annotated.html  annotated_dup.js  catch__amalgamated_8cpp.html  catch__amalgamated_8cpp.js  catch__amalgamated_8cpp__incl.map  catch__amalgamated_8cpp__incl.md5  catch__amalgamated_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  catch__amalgamated_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  catch__amalgamated_8cpp_a62bf6e1353fde8e95644d156c4a8b3ed_icgraph.map  catch__amalgamated_8cpp_a62bf6e1353fde8e95644d156c4a8b3ed_icgraph.md5  catch__amalgamated_8hpp.html  catch__amalgamated_8hpp.js  catch__amalgamated_8hpp__dep__incl.map  catch__amalgamated_8hpp__dep__incl.md5  catch__amalgamated_8hpp__incl.map  catch__amalgamated_8hpp__incl.md5  catch__amalgamated_8hpp_source.html  classCatch_1_1Approx-members.html  classCatch_1_1Approx.html  (+2775 more)
docs/html/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_21.js  all_22.js  all_3.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+117 more)
docs/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  activation_8h.tex  activation_8h__dep__incl.md5  activation_8h__incl.md5  activation_8h_source.tex  agent_8cpp.tex  agent_8cpp__incl.md5  agent_8h.tex  agent_8h__dep__incl.md5  agent_8h__incl.md5  agent_8h_source.tex  annotated.tex  catch__amalgamated_8cpp.tex  catch__amalgamated_8cpp__incl.md5  catch__amalgamated_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  catch__amalgamated_8cpp_a62bf6e1353fde8e95644d156c4a8b3ed_icgraph.md5  catch__amalgamated_8hpp.tex  catch__amalgamated_8hpp__dep__incl.md5  catch__amalgamated_8hpp__incl.md5  catch__amalgamated_8hpp_source.tex  classCatch_1_1Approx.tex  classCatch_1_1Approx_a00b9ca1984b955801334985da44ed863_cgraph.md5  classCatch_1_1Approx_a02b674bd81e29e1cb9d9410a7289ebc5_cgraph.md5  classCatch_1_1Approx_a02b674bd81e29e1cb9d9410a7289ebc5_icgraph.md5  classCatch_1_1Approx_a07c1b6a3fc58c7b724aa0ef082e32704_cgraph.md5  classCatch_1_1Approx_a517d8133c80266dae10f7a092dea7da8_cgraph.md5  classCatch_1_1Approx_a64d933793282cb68a9e4934637f900fe_cgraph.md5  classCatch_1_1Approx_a8b01c1b0697e834c6df637b5163a7dac_cgraph.md5  classCatch_1_1Approx_aae48202f7bf38b6e3ebfaac7ef46b7af_cgraph.md5  classCatch_1_1Approx_ab9b569c030c0399a187f96e7d95e501f_cgraph.md5  classCatch_1_1Approx_ab9b569c030c0399a187f96e7d95e501f_icgraph.md5  classCatch_1_1Approx_af4d5b0df9462561dacb65f19b9c770c3_cgraph.md5  classCatch_1_1AssertionHandler.tex  classCatch_1_1AssertionHandler_a193bb3999494c46457f3059184c6b251_cgraph.md5  classCatch_1_1AssertionHandler_a74627e1e399b026e9acbaf95ea673643_cgraph.md5  classCatch_1_1AssertionHandler_a878a9eb828d8a1863c8dcb6575f6f40e_cgraph.md5  classCatch_1_1AssertionHandler_aa2504dad6a91f3645e5f52c932c11270_cgraph.md5  classCatch_1_1AssertionHandler_ac061e1d051135385f450973b676b2579_cgraph.md5  classCatch_1_1AssertionHandler_ac061e1d051135385f450973b676b2579_icgraph.md5  (+1233 more)
include/common/: agent.h  constants.h  data.h  init.h  utils.h
include/game/: constants.h  game.h  pixels.h  render.h
include/game/math/: equation.h  factory.h  interfaces.h
include/game/sdl/: color.h  draw.h  text.h  texture.h  time.h
include/trainer/: loader.h
include/utec/algebra/: tensor.h
include/utec/nn/: activation.h  dense.h  interfaces.h  kan.h  layer_registry.h  loss.h  neural_network.h  nn_activation.h  nn_dense.h  nn_loss.h  optimizer.h
include/utec/utils/: serialization.h
legacy_kan/: net_kan.pp20
neural-network/: nn_activation.h  nn_interfaces.h  nn_optimizer.h  tensor.h
share/: net.pp20
src/common/: agent.cpp  data.cpp  init.cpp
src/game/: game.cpp  main.cpp  pixels.cpp  sdl_extra.cpp  state.cpp
src/game/math/: equation.cpp  factory.cpp
src/game/sdl/: draw.cpp  text.cpp  texture.cpp  time.cpp
src/include/game/: constants.h  font_data.h  game.h  render.h  sdl_extra.h  state.h
src/include/game/math/: factory.h  interfaces.h
src/include/game/sdl/: color.h  text.h  time.h
src/include/utec/algebra/: tensor.h
src/include/utec/nn/: activation.h  dense.h  interfaces.h  kan.h  loss.h  neural_network.h  optimizer.h  serialization.h
src/trainer/: loader.cpp  main.cpp
src/trainer_kan/: main.cpp
tensors/: tensor.h
tests/: CMakeLists.txt  test_nn  test_nn.cpp  test_tensor.cpp
tests/catch/: catch_amalgamated.hpp
